<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_daily_backButton"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:icon="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tv_daily_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="?textColorDailyScreen"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/currentWeatherBackground">

            <ImageView
                android:id="@+id/iv_daily_weatherIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_daily_description"
                android:layout_width="200dp"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/iv_daily_weatherIcon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TableRow
                android:layout_width="match_parent"
                android:minHeight="40dp"
                android:gravity="center">

                <TextView
                    android:text="@string/morning"
                    android:gravity="center"
                    android:layout_width="100dp"
                    android:layout_weight="10"
                    android:textColor="?textColorDailyScreen"
                    />
                <TextView
                    android:text="@string/day"
                    android:gravity="center"
                    android:layout_width="100dp"
                    android:layout_weight="10"
                    android:textColor="?textColorDailyScreen"
                    />
                <TextView
                    android:text="@string/evening"
                    android:gravity="center"
                    android:layout_width="100dp"
                    android:layout_weight="10"
                    android:textColor="?textColorDailyScreen"
                    />
                <TextView
                    android:text="@string/night"
                    android:gravity="center"
                    android:layout_width="100dp"
                    android:layout_weight="10"
                    android:textColor="?textColorDailyScreen"
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:minHeight="40dp"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/tv_daily_morningTemp"
                    android:gravity="center"
                    android:layout_width="100dp"
                    android:layout_weight="10"
                    android:textColor="?textColorDailyScreen"
                    />
                <TextView
                    android:id="@+id/tv_daily_dayTemp"
                    android:gravity="center"
                    android:layout_width="100dp"
                    android:layout_weight="10"
                    android:textColor="?textColorDailyScreen"
                    />
                <TextView
                    android:id="@+id/tv_daily_eveningTemp"
                    android:gravity="center"
                    android:layout_width="100dp"
                    android:layout_weight="10"
                    android:textColor="?textColorDailyScreen"
                    />
                <TextView
                    android:id="@+id/tv_daily_nightTemp"
                    android:gravity="center"
                    android:layout_width="100dp"
                    android:layout_weight="10"
                    android:textColor="?textColorDailyScreen"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:minHeight="40dp"
                android:gravity="center"
                >
                <TextView
                    android:text="@string/wind_speed"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_weight="10"
                    android:gravity="start"
                    android:textColor="?textColorDailyScreen"
                    />
                <TextView
                    android:id="@+id/tv_daily_wind"
                    android:layout_weight="20"
                    android:gravity="start"
                    android:textColor="?textColorDailyScreen"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                >
                <TextView
                    android:text="@string/humidity"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_weight="10"
                    android:gravity="start"
                    android:textColor="?textColorDailyScreen"
                    />
                <TextView
                    android:id="@+id/tv_daily_humidity"
                    android:layout_weight="20"
                    android:gravity="start"
                    android:textColor="?textColorDailyScreen"
                    />
            </TableRow>
        </TableLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>